# DiWaCAT

./: DiWaCAT Manual.docx  DiWaCAT.bat  DiWaCAT_GUI.py  DiWaCAT_GUI_NonParallel.py  LICENSE  README.md  dependencies.txt
Cpp_Source/: CMakeLists.txt  CircularGreenFunction.h  DiWaCAT_FieldCalc.py  FunctionsPythonBinding.cpp  PlanarGreensFunctions.h
FieldSolver_Executable/: 600fs_Gaus.h5  TestBeamOut.h5
FieldSolver_Executable/Cpp_Source/: CircularGreenFunction.h  DiWaCAT_FieldSolverUI.vcxproj  DiWaCAT_FieldSolverUI.vcxproj.filters  FieldFunctions.h  PlanarGreensFunctions.h  VariableForm.h  VariableForm.resx  VariablesForm.cpp
GUI_Source/: BeamMakeWindow.py  BeamMeshWindow.py  BeamPlotter.py  BeamTools_GUI.py  DiWaCAT_Tracker.py  FieldCalcWindow.py  FieldPlotter.py
Python_Tools/Example_Scripts/: DiWaCAT_SimPythonScript.py  DiWaCAT_example.py  Example_DiWaCAT_Beam.h5  HDF5_BeamMaker.py  HDF5_MeshCreator.py  HDF5_ScreenImage_Toby.py  Ocelot_Beamline_Example.py
Python_Tools/Examples/: ExamplePlottingDensity.py  Example_TwoBeamMaker.py  GradientBlur_for_BA1_YAG03.py  example_beam_Image_workflow.py
Python_Tools/Modules/: Arb_Dist_Sampler.py  beam_to_screen.py  beam_tools.py  beam_tools_Toby.py  diwacat_ocelot.py  diwacat_tools.py  general_tools.py  image_tools.py  read_beam_file.py  slit_scan_tools.py  streaker_tools.py  tracking_tools.py
Python_Tools/Test_Files/: testing_beam_binner.py  testing_beam_kick.py  testing_beam_slicing.py  testing_beam_to_screen.py  testing_beam_tools.py  testing_beam_tools_hdf5_file.py  testing_beam_tools_wakecode_file.py  (+4 more)
